examples/rejections/canisters/rejections/rejections.did
type RejectionCode = variant {
  NoError;
  CanisterError;
  SysTransient;
  DestinationInvalid;
  Unknown;
  SysFatal;
  CanisterReject;
};
service : () -> {
  getRejectionCodeCanisterError : () -> (RejectionCode);
  getRejectionCodeCanisterReject : () -> (RejectionCode);
  getRejectionCodeDestinationInvalid : () -> (RejectionCode);
  getRejectionCodeNoError : () -> (RejectionCode);
  getRejectionMessage : (text) -> (text);
}